Fix overflow in navbar
Change the size fot the images in lastest news section

--- a/stylesheet/responsive.css
+++ b/stylesheet/responsive.css
@@ -240,14 +240,6 @@
     display: block;
   }
 
-  .nav-b {
-    background-color: #fff;
-    border: 0;
-    border-left: 1px solid #e9e9e9;
-    height: 100%;
-    width: 48px;
-  }
-
   .logo-container .logo-resp {
     display: block;
   }
@@ -266,6 +258,10 @@
     justify-content: space-between;
   }
 
+  .navigation-bar ul:nth-child(2) li:nth-child(5) {
+    flex-grow: 2;
+  }
+
   .hidden-menu {
     display: none;
     float: right;
@@ -275,12 +271,11 @@
     display: none;
   }
 
-  .nav-bar .hidden:nth-child(6) {
+  .hidden:nth-child(6) {
     padding-right: 25%;
   }
 
-  .nav-bar .hidden:nth-child(7),
-  .nav-bar .hidden:nth-child(8) {
+  .hidden-2 {
     display: none;
   }
 
@@ -290,6 +285,10 @@
     width: 87%;
     padding: 0 0 0 13%;
     font-size: 0.8rem;
+  }
+
+  .hidden-btn {
+    display: none;
   }
 
   .article-container {
@@ -330,7 +329,7 @@
     grid-gap: 15px;
     width: 100%;
     margin-top: 10px;
-    grid-column-gap: 6%;
+    grid-column-gap: 4%;
     grid-row-gap: 20px;
     margin-bottom: 50px;
   }
@@ -338,7 +337,7 @@
   .news-section .new-content {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 233px 100px;
+    grid-template-rows: 150px 100px;
     grid-gap: 4%;
     width: 100%;
   }
@@ -488,7 +487,6 @@
   }
 
   .navigation-bar ul:nth-child(2) {
-    height: 100%;
     font-size: 13px;
     
   }
@@ -502,7 +500,7 @@
     padding: 0 1%;
   }
 
-  .navigation-bar .hidden-navigation {
+  .hidden-navigation {
     display: none;
   }
 
@@ -514,6 +512,10 @@
 @media only screen and (min-width: 1024px) {
   .nav-bar .nav-i {
     padding: 0 1%;
+  }
+
+  .hidden-btn {
+    display: none;
   }
 
   .article-container {
@@ -646,20 +648,16 @@
 
   .news-section .new-content {
     display: grid;
-    grid-template-columns: 270px;
+    grid-template-columns: 1fr;
     grid-template-rows: 135px 85px;
     grid-gap: 4%;
     width: 100%;
   }
 
-  .new-content .news-img {
-    height: 135px;
-    width: 270px;
-  }
-
+  .new-content .news-img,
   .deals-img {
-    height: 201px;
-    width: 270px;
+    height: 100%;
+    width: 100%;
   }
 
   .deals-txt {
@@ -774,10 +772,6 @@
 
   .nav-p {
     padding: 0 1%;
-  }
-
-  .navigation-bar .hidden-navigation {
-    display: none;
   }
 
   .navigation-bar .xs-menu {
