--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -128,9 +128,11 @@ body {
 }
 
 .nav-b {
-  
-  border: 1px solid transparent;
-  
+  background-color: #fff;
+  border: 0;
+  border-left: 1px solid #e9e9e9;
+  height: 100%;
+  width: 48px;
 }
 
 .nav-bottom {
